fix overlapping copy button on top of demo's code

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -9,6 +9,11 @@
   }
 }
 
+// prevent copy button from overlapping code
+pre {
+  padding-right: 60px !important;
+}
+
 .not-found {
   padding: 30px;
 
